Refactor test containers to use final and try-with-resources for better resource management